--- a/Example-002/cmake/CMakeLists.txt
+++ b/Example-002/cmake/CMakeLists.txt
@@ -16,7 +16,7 @@ if (APPLE OR CMAKE_HOST_APPLE)
 elseif (UNIX OR CMAKE_HOST_UNIX)
 	add_executable(Example-002 ../src/main.cpp)
 elseif (WIN32 OR CMAKE_HOST_WIN32)
-	add_executable(Example-002 ..\src\main.cpp)
+	add_executable(Example-002 ../src/main.cpp)
 else ()
 	message(FATAL_ERROR "The current platform is not supported")
 endif ()
