fixing cmake bugs when using cmake under MS Windows

--- a/Example-004/cmake/CMakeLists.txt
+++ b/Example-004/cmake/CMakeLists.txt
@@ -28,7 +28,7 @@ if (APPLE OR CMAKE_HOST_APPLE)
 elseif (UNIX OR CMAKE_HOST_UNIX)
 	add_executable(Example-004 ../src/main.cpp)
 elseif (WIN32 OR CMAKE_HOST_WIN32)
-	add_executable(Example-004 ..\src\main.cpp)
+	add_executable(Example-004 ../src/main.cpp)
 else ()
 	message(FATAL_ERROR "The current platform is not supported")
 endif ()
