modified a little bit the 'Example-031' test

--- a/Example-031/cmake/CMakeLists.txt
+++ b/Example-031/cmake/CMakeLists.txt
@@ -10,6 +10,6 @@
 ##################################################################################
 
 cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
-project(Example LANGUAGES CXX)
+project(Example-031 LANGUAGES CXX)
 include_directories(../include)
 add_executable(Example-031 ../src/main.cpp)
