Minor/medium revisions for several tests

--- a/Example-009/cmake/CMakeLists.txt
+++ b/Example-009/cmake/CMakeLists.txt
@@ -4,13 +4,25 @@
 #
 # GitHub repository: http://github.com/davidcanino/C_plus_plus_examples
 #
-# David Canino, December 2016
+# David Canino, June 2017
 #
 # CMakeLists.txt - the CMake directives for building the test 'Example-009'
 ##################################################################################
 
 cmake_minimum_required(VERSION 2.8.6 FATAL_ERROR)
 project(Example-009 LANGUAGES CXX)
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+if(COMPILER_SUPPORTS_CXX11)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif(COMPILER_SUPPORTS_CXX0X)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+else()
+        message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+endif()
+
+#If we arrive here, the current compiler has the C++11 support.
 if (APPLE OR CMAKE_HOST_APPLE)
 	include_directories(../include)
 	add_executable(Example-009 ../src/myfunctions.cpp ../src/main.cpp)
